--- a/packages/zutolab-errors/errors_list.html
+++ b/packages/zutolab-errors/errors_list.html
@@ -1,12 +1,12 @@
-<template name="errors">
+<template name="meteorErrors">
   <div class="errors row-fluid">
     {{#each errors}}
-      {{> error}}
+      {{> meteorError}}
     {{/each}}
   </div>
 </template>
 
-<template name="error">
+<template name="meteorError">
   <div class="alert alert-error">
     <button type="button" class="close" data-dismiss="alert">&times;</button>
     {{message}}
